--- a/myself/package.json
+++ b/myself/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.4",
     "browser-router": "^0.2.0",
     "chart.js": "^4.2.1",
+    "chartjs": "^0.3.24",
     "css-modules": "^0.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
