--- a/myself/package.json
+++ b/myself/package.json
@@ -14,6 +14,7 @@
     "chartjs": "^0.3.24",
     "css-modules": "^0.3.0",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -23,9 +24,12 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
-    "web-vitals": "^2.1.0"
+    "styled-components": "^5.3.9",
+    "web-vitals": "^2.1.0",
+    "webkit": "^0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
