--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "d3.js": "^0.0.2-security",
-    "react-vis": "^1.11.12"
+    "react-vis": "^1.11.12",
+    "redux-thunk": "^2.4.2"
   }
 }
