--- a/myself/package.json
+++ b/myself/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.2.1",
     "chartjs": "^0.3.24",
     "css-modules": "^0.3.0",
+    "nuka-carousel": "^5.5.1",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.7.2",
@@ -22,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
