--- a/myself/package.json
+++ b/myself/package.json
@@ -4,26 +4,36 @@
   "private": true,
   "dependencies": {
     "@coreui/react": "^4.7.0",
+    "@nivo/circle-packing": "^0.80.0",
+    "@nivo/core": "^0.80.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/d3": "^7.4.0",
+    "@types/d3-force": "^3.0.4",
+    "@weknow/react-bubble-chart-d3": "^1.0.12",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "browser-router": "^0.2.0",
     "chart.js": "^4.2.1",
     "chartjs": "^0.3.24",
     "css-modules": "^0.3.0",
+    "d3": "^7.8.4",
+    "d3-force": "^3.0.0",
     "nuka-carousel": "^5.5.1",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.7.2",
+    "react-bubble-chart": "^0.4.0",
     "react-chartjs-2": "^5.2.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-uuid": "^2.0.0",
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
