--- a/myself/package.json
+++ b/myself/package.json
@@ -6,6 +6,7 @@
     "@coreui/react": "^4.7.0",
     "@nivo/circle-packing": "^0.80.0",
     "@nivo/core": "^0.80.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
