--- a/myself/package.json
+++ b/myself/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
     "react-uuid": "^2.0.0",
     "recharts": "^2.5.0",
